# You must change these to your own details.
[package]
name = "acm-wasm"
description = "Arithmetic congruence monoid web application"
version = "0.1.0"
authors = ["Nils Olsson <nilso@enosis.net>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2.45", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.2", optional = true }
#acm = { git = "https://github.com/nilsso/acm_rust.git" }
acm = { path = "/Users/nilsso/Documents/Rust/acm-rust" }
serde = { version = "1.0.114", features = ["derive"] }
primal-sieve = "0.3.1"
num = "0.3.0"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
